# bulbulator_head_banger

./: Buffer_UNIT_TESTS.h  CMakeLists.txt  ClientTCP.h  UM7LT.h  _base_UM7LT.h  _base_UM7LT_UNIT_TESTS.h  base_UM7LT_UNIT_TESTS.h  main.cpp
bulbulator/: main.cpp
bulbulator/src/: PortCOM.cpp  PortCOM.h  UM7LT.cpp
lib/: Buffer.h  CONFIG.h  Matrix.h  MovingArray.h  Plot.h  PortCOM.h  Vector.h  _base_UM7LT.h  base_UM7LT.h
lib/math/: Vector.h  myMath.h
lib/serial/: ClientTCP.h  PortCOM.cpp  PortCOM.h
passed_unit_tests/: Buffer_UNIT_TESTS.h  ClientTCP_UNIT_TEST.h
src/: CONFIG.h  DefineFunctions.h  DigitalFilter.h  EulerAngles.cpp  EulerAngles.h  GLOBAL_DATA_FROM_SOURCES.h  Matrix.h  MiniMaestro.cpp  MiniMaestro.h  MovingArray.h  MovingArrayPtr.h  PortCOM.cpp  PortCOM.h  Quaternion.cpp  Quaternion.h  RobotControl.cpp  RobotControl.h  RotationMatrix.cpp  RotationMatrix.h  SensorsStructures.h  UM7LT.cpp  UM7LT.h  UM7_LT.cpp  UM7_LT.h  Vector.cpp  Vector.h  Vector3D.h  _base_UM7LT.cpp  _base_UM7LT.h  crossOSfunctions.h  fdacoefs.h  iir_filter1.h  iir_filter2.h  lin_high_pass_filter.h  miniMaestro.cpp  miniMaestro.h  server.h
